# vtol_ws

./: .gitignore  README_LOCALIZATION.md  check_image.py  check_mavlink.py  conspect.md  convert_bag_to_mp4.py  extract_gps.py  flight_visualization.html  jetson.info  make_picture.py  test_aruco  test_aruco.cpp  update_markers.py  visual_navigation_guide.md  visual_positioning_demo.py
autostart/: README.txt  install_systemd.sh  launch_flight.sh  launch_logger.sh  run_on_boot.sh
config/: camera.yaml  flight.yaml  logger.yaml  marker_positions.yaml  markers.yaml  mission.yaml  tags_detector.yaml  visualize.yaml
config/ardupilot/: README.txt
for_llm/: launch_takeoff.sh
install/: local_setup.sh  setup.sh
install/ardupilot_mavlink_bridge/lib/ardupilot_mavlink_bridge/: mavlink_bridge_node
install/ardupilot_mavlink_bridge/share/ardupilot_mavlink_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bringup/share/bringup/: package.sh
install/bringup/share/bringup/launch/: system.launch.py
install/camera/lib/camera/: camera_node
install/camera/share/camera/: local_setup.sh  package.sh  package.xml
install/pose_bridge/lib/pose_bridge/: pose_bridge_node
install/pose_bridge/share/pose_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tag_detector/lib/tag_detector/: tag_detector_node
install/tag_detector/share/ament_index/resource_index/package_run_dependencies/: tag_detector
install/tag_detector/share/tag_detector/: local_setup.dsv  package.bash  package.sh  package.xml  package.zsh
install/tag_nav_stub/share/tag_nav_stub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
scripts/: bag_to_csv.py  install_orb_slam3.sh
src/ardupilot_mavlink_bridge/: package.xml  setup.cfg  setup.py
src/ardupilot_mavlink_bridge/ardupilot_mavlink_bridge/: command_services.py  frame_transforms.py  mavlink_bridge_node.py  mavlink_io.py  telemetry_logger_node.py  telemetry_publisher.py  vision_forwarder.py
src/bringup/: package.xml  setup.py
src/bringup/bringup/: video_player.py
src/bringup/launch/: README.md  bench_test.launch.py  flight.launch.py  logger.launch.py  record_flight.launch.py  scenario_ascend_34_1_55.launch.py  scenario_full_marker_route.launch.py  scenario_takeoff_land_pad34.launch.py  system_localization.launch.py  video_test.launch.py
src/camera/: CMakeLists.txt
src/camera/src/: camera_node.cpp  video_recorder_node.cpp
src/dpvo_bridge/: README.md  package.xml  setup.cfg  setup.py
src/dpvo_bridge/config/: dpvo_params.yaml
src/dpvo_bridge/dpvo_bridge/: dpvo_node.py  dpvo_trajectory_writer_node.py  trajectory_logger_node.py
src/dpvo_bridge/launch/: dpvo_with_logger.launch.py
src/dpvo_bridge/resource/: dpvo_bridge
src/dpvo_bridge/scripts/: run_dpvo_node.sh  run_dpvo_node_jetson.sh
src/flight_interfaces/: CMakeLists.txt  package.xml
src/flight_interfaces/srv/: GoToGlobal.srv  SwitchEKFSource.srv  Takeoff.srv  UploadMission.srv
src/flight_manager/: package.xml  setup.cfg  setup.py
src/flight_manager/flight_manager/: README.md  gps_range_test_node.py  gps_takeoff_land_node.py  gps_waypoints_node.py  mission_manager_node.py  safety_log_supervisor_node.py  single_source_router_node.py  tf_broadcaster_node.py  vision_fusion_node.py
src/marker_interfaces/: CMakeLists.txt  package.xml
src/marker_interfaces/msg/: LocalizerStatus.msg  MarkerDetection.msg  MarkerDetectionArray.msg  MarkerMap.msg  MarkerMapEntry.msg  NavStatus.msg
src/orb_slam3_bridge/: CMakeLists.txt  package.xml
src/orb_slam3_bridge/config/: orb_slam3_imu_monocular_template.yaml  orb_slam3_monocular_template.yaml
src/orb_slam3_bridge/launch/: orb_slam3.launch.py
src/orb_slam3_bridge/src/: orb_slam3_node.cpp
src/pose_bridge/: package.xml  setup.cfg  setup.py
src/tag_detector/: CMakeLists.txt  package.xml
src/tag_detector/src/: tag_detector_node.cpp
src/tag_localizer/: package.xml  setup.cfg  setup.py
src/tag_localizer/config/: alti_transition_runway_pad_map.yaml  bench_test_map.yaml  full_map.yaml  minimal_map.yaml
src/tag_localizer/tag_localizer/: geo.py  localizer_node.py
src/tag_nav_stub/: setup.cfg  setup.py
src/tag_nav_stub/tag_nav_stub/: mission_manager_node.py
src/vision_interfaces/: CMakeLists.txt  README.md  package.xml
src/vision_interfaces/msg/: GlobalAnchor.msg  KeyFrameEvent.msg  VisionOdometry.msg  VisionStatus.msg
src/vision_interfaces/srv/: ResetVision.srv  SetGlobalAnchor.srv
tools/: apply_arming_check.py  apply_sitl_visual_only.py
tools/flight_viz/: README.md  __init__.py  __main__.py  classify.py  geo.py  loader.py  plots.py  readers.py  requirements.txt
tools/localizer_replay/: __init__.py  __main__.py  replay.py
